# progbase_course

progbase2/labs/lab8/: .~lock.КП61_ЛР8_ЩербинаВадим.docx#  CMakeLists.txt  Doxyfile  main.cpp  КП61_ЛР8_ЩербинаВадим.docx
progbase2/labs/lab8/data/: data.txt
progbase2/labs/lab8/html/: annotated.html  classPlaces-members.html  classPlaces.html  classes.html  dir_000006_000005.html  dir_2c1ec4cfaf5ed43ec260b4f91f837847.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a41afb44cd77021f04ef0298981be91e.html  dir_a573004c1aa1ac4f8bc48460229ea7de.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  jsonconverter_8h.html  jsonconverter_8h__incl.map  jsonconverter_8h__incl.md5  jsonconverter_8h_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  places_8h.html  places_8h__dep__incl.map  places_8h__dep__incl.md5  places_8h__incl.map  places_8h__incl.md5  places_8h_source.html  tcp__server_8h.html  tcp__server_8h__dep__incl.map  tcp__server_8h__dep__incl.md5  tcp__server_8h__incl.map  tcp__server_8h__incl.md5  tcp__server_8h_source.html
progbase2/labs/lab8/include/: jsonconverter.h  places.h  request.h  tcp_server.h
progbase2/labs/lab8/latex/: annotated.tex  classPlaces.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  jsonconverter_8h.tex  jsonconverter_8h__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  places_8h.tex  places_8h__dep__incl.md5  refman.tex  (+4 more)
(+568 files in other folders)
